added create routes

--- a/views/categories.pug
+++ b/views/categories.pug
@@ -7,3 +7,4 @@ html(lang = 'en')
     each category in found_categories
         li
             a(href = category.url) #{category.name}
+   a(href=create) Create Category
