can add items to category

--- a/views/category_detail.pug
+++ b/views/category_detail.pug
@@ -10,4 +10,4 @@ html(lang = 'en')
         each item in items
           li #{item.name}
           |#{item.description}
-
+   a(href=itemURL) Add Items Here
