--- a/views/category_detail.pug
+++ b/views/category_detail.pug
@@ -8,6 +8,10 @@ html(lang = 'en')
 
       ul
         each item in items
-          li #{item.name}
-          |#{item.description}
+          #item
+            a(href=item.url)
+              li #{item.name}
+              |#{item.description}
+
+            a(href = `/categories/delete/${item.url}/${catID}`) Delete
    a(href=itemURL) Add Items Here
