--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,12 @@
 div:hover {
-    background-color: 'yellow'
+    background-color: yellow
+}
+
+.image {
+    width: 100px;
+    height: 100px;
+}
+
+#heading {
+    color: blue;
 }
