added login auth functionality

--- a/views/categories.pug
+++ b/views/categories.pug
@@ -2,6 +2,8 @@ doctype html
 html(lang = 'en')
  head
    title Home
+   link(rel='stylesheet', href='/style.css')
+
  body
    h1 Welcome to the categories page
     each category in found_categories
