--- a/views/updateCat.pug
+++ b/views/updateCat.pug
@@ -7,6 +7,8 @@ html(lang = 'en')
 html(lang = 'en')
  head
    title Home
+   link(rel='stylesheet', href='/style.css')
+
  body
    h1 This is the #{cat.name} page
    h1 #{cat.description}
