--- a/views/add_items.pug
+++ b/views/add_items.pug
@@ -2,6 +2,7 @@ doctype html
 html(lang = 'en')
  head
    title Home
+   link(rel='stylesheet', href='/style.css')
  body
   form(method='POST' action = itemURL)
     label(for='cat') Category:
