--- a/views/create_form.pug
+++ b/views/create_form.pug
@@ -2,6 +2,8 @@
 html(lang = 'en')
  head
    title Home
+   link(rel='stylesheet', href='/style.css')
+
  body
  form(method='POST' action = 'create')
     label(for='category') Category:
@@ -9,6 +11,7 @@ html(lang = 'en')
     label(for='description') Description:
     input(type = 'text' placeholder='Category' name='description' required='true')
     label(for='items') Add Items
+
     textarea#items(name='items')
 
 
