--- a/views/items.pug
+++ b/views/items.pug
@@ -2,6 +2,8 @@ doctype html
 html(lang = 'en')
  head
    title Home
+   link(rel='stylesheet', href='/style.css')
+
  body
    h1 Welcome to the items page
    ul
