--- a/views/items_detail.pug
+++ b/views/items_detail.pug
@@ -8,15 +8,18 @@ html(lang = 'en')
 
    h1#heading This is the #{item.name} page
    p #{item.description}
-   a(href=`/items/${item.url}`) Edit
+   if user === 'signed in'
+      a(href=`/items/${item.url}`) Edit
    #image
      if !item.img
       img(class = 'image' src='/IMG-0064.jpg' )
      else
       each img in item.img
         img(class = 'image' src=`/${img}`)
+        input( type = 'file'  name="uploaded_file")
+        button(type='submit') Submit
 
-
-   form(method='POST' action = `/items/${item._id}` enctype="multipart/form-data")
-      input( type = 'file'  name="uploaded_file")
-      button(type='submit') Submit
+   if user === 'signed in'
+      form(method='POST' action = `/items/${item._id}` enctype="multipart/form-data")
+          input( type = 'file'  name="uploaded_file")
+          button(type='submit') Submit
