--- a/views/login.pug
+++ b/views/login.pug
@@ -5,7 +5,7 @@ html(lang = 'en')
    link(rel='stylesheet', href='/style.css')
 
  body
- form(method='POST' action = '/categories/login')
+ form(method='POST' action = '/login')
     label(for='password') Login:
     input(type = 'text' placeholder='enter password' name='password' required='true')
 
